# phlo-examples

./: .gitignore
analyst-duckdb-demo/: README.md
github/: .gitignore  README.md  phlo.yaml  pyproject.toml
github/.phlo/: .gitignore  docker-compose.yml
github/.phlo/dagster/: entrypoint.sh  workspace.yaml
github/tests/: test_merge_strategies.py
github/workflows/ingestion/github/: helpers.py  user_events.py  user_repos.py
github/workflows/quality/: dbt.py  github.py
github/workflows/schemas/: github.py
github/workflows/transforms/dbt/: dbt_project.yml
github/workflows/transforms/dbt/profiles/: .user.yml
nightscout/: .gitignore  README.md  phlo.yaml  pyproject.toml
nightscout/.phlo/: .gitignore  docker-compose.yml
nightscout/.phlo/dagster/: Dockerfile  dagster.yaml  entrypoint.sh
nightscout/workflows/ingestion/nightscout/: helpers.py  readings.py
nightscout/workflows/quality/: nightscout.py
nightscout/workflows/schemas/: nightscout.py
nightscout/workflows/transforms/dbt/profiles/: profiles.yml
nightscout/workflows/transforms/dbt/tests/: README.md
pokemon/: README.md  pyproject.toml
pokemon/workflows/ingestion/pokemon/: __init__.py  helpers.py  pokemon.py
pokemon/workflows/schemas/: pokemon.py
pokemon/workflows/transforms/dbt/profiles/: profiles.yml
workshop/: .gitignore  README.md  phlo.yaml  pyproject.toml  validate_all.py
workshop/.phlo/: docker-compose.yml
workshop/.phlo/trino/: config.properties  jvm.config
workshop/chapters/00-workshop-warmup/: README.md  chapter.yaml  check.py
workshop/chapters/01-ingest-pokemon/: README.md  chapter.yaml  check.py
workshop/chapters/01-ingest-pokemon/solution/workflows/ingestion/: pokemon.py
workshop/chapters/01-ingest-pokemon/solution/workflows/schemas/: pokemon.py
workshop/chapters/01-ingest-pokemon/start/workflows/ingestion/: helpers.py  pokemon.py
workshop/chapters/01-ingest-pokemon/start/workflows/schemas/: pokemon.py
workshop/chapters/02-validate-your-data/: README.md  chapter.yaml  check.py
workshop/chapters/02-validate-your-data/start/workflows/ingestion/: pokemon.py
workshop/chapters/03-transform-with-dbt/: README.md  chapter.yaml  check.py
workshop/chapters/03-transform-with-dbt/solution/workflows/transforms/dbt/models/: sources.yml
workshop/chapters/03-transform-with-dbt/solution/workflows/transforms/dbt/models/gold/: fct_pokemon_by_generation.sql
workshop/chapters/03-transform-with-dbt/solution/workflows/transforms/dbt/profiles/: profiles.yml
workshop/chapters/03-transform-with-dbt/start/workflows/transforms/dbt/: dbt_project.yml
workshop/chapters/03-transform-with-dbt/start/workflows/transforms/dbt/models/: sources.yml
workshop/chapters/03-transform-with-dbt/start/workflows/transforms/dbt/models/gold/: dim_pokemon.sql  dim_types.sql  fct_pokemon_by_generation.sql
workshop/chapters/03-transform-with-dbt/start/workflows/transforms/dbt/models/silver/: stg_pokemon.sql  stg_pokemon_types.sql
workshop/chapters/04-explore-in-pgweb/: README.md  chapter.yaml  check.py
workshop/chapters/05-data-contracts/: README.md  chapter.yaml  check.py
workshop/chapters/05-data-contracts/start/contracts/: pokemon.py
workshop/chapters/05-data-contracts/start/workflows/ingestion/: pokemon.py
workshop/chapters/06-schema-evolution/: README.md  chapter.yaml  check.py
workshop/chapters/06-schema-evolution/start/workflows/schemas/: pokemon.py
workshop/chapters/07-branch-your-data/: README.md  chapter.yaml  check.py
workshop/chapters/08-alerting-and-hooks/: README.md  chapter.yaml  check.py
workshop/chapters/09-tracing-and-metrics/: README.md  chapter.yaml  check.py
workshop/chapters/10-logs-and-dashboards/: README.md  chapter.yaml  check.py
workshop/chapters/11-lineage/: README.md  chapter.yaml  check.py
workshop/chapters/12-data-catalog/: README.md  chapter.yaml  check.py
workshop/chapters/13-apis-for-your-data/: README.md  chapter.yaml  check.py
workshop/chapters/14-bi-dashboards-and-urls/: README.md  chapter.yaml  check.py
workshop/chapters/15-second-source-with-sling/: README.md  chapter.yaml  check.py
workshop/chapters/15-second-source-with-sling/solution/workflows/ingestion/: cards.py
workshop/chapters/15-second-source-with-sling/start/workflows/ingestion/: cards.py
workshop/chapters/15-second-source-with-sling/start/workflows/transforms/dbt/models/gold/: fct_card_values.sql
workshop/chapters/16-build-your-own-plugin/: README.md  chapter.yaml  check.py
workshop/chapters/16-build-your-own-plugin/solution/: pyproject.toml
workshop/chapters/16-build-your-own-plugin/solution/plugins/: pokemon_stats.py
workshop/chapters/16-build-your-own-plugin/start/plugins/: pokemon_stats.py
workshop/chapters/16-build-your-own-plugin/start/tests/: test_pokemon_ingestion.py
workshop/contracts/: pokemon.py
workshop/data/: pokemon_cards.csv
workshop/tests/: test_pokemon_ingestion.py
workshop/workflows/ingestion/: helpers.py  pokemon.py
workshop/workflows/schemas/: pokemon.py
workshop/workflows/transforms/dbt/: dbt_project.yml
workshop/workflows/transforms/dbt/models/gold/: dim_pokemon.sql  dim_types.sql  fct_card_values.sql
workshop/workflows/transforms/dbt/models/silver/: stg_pokemon.sql  stg_pokemon_types.sql
workshop/workflows/transforms/dbt/profiles/: profiles.yml
workshop/workshop_runner/: __init__.py  cli.py  manifest.py  runner.py  services.py
