[project]
name = "github-stats"
version = "0.1.0"
description = "Phlo GitHub stats demo"
requires-python = ">=3.11"
dependencies = [
    "phlo",
    "phlo-core-plugins",
    "phlo-dagster",
    "phlo-dlt",
    "phlo-dbt",
    "phlo-iceberg",
    "phlo-nessie",
    "phlo-trino",
    "phlo-postgres",
    "phlo-minio",
    "phlo-pandera",
    "phlo-testing",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff",
]

# For local development within the monorepo
[tool.uv.sources]
phlo = { path = "../../phlo", editable = true }
phlo-core-plugins = { path = "../../phlo/packages/phlo-core-plugins", editable = true }
phlo-iceberg = { path = "../../phlo/packages/phlo-iceberg", editable = true }
phlo-dlt = { path = "../../phlo/packages/phlo-dlt", editable = true }
phlo-dbt = { path = "../../phlo/packages/phlo-dbt", editable = true }
phlo-dagster = { path = "../../phlo/packages/phlo-dagster", editable = true }
phlo-postgres = { path = "../../phlo/packages/phlo-postgres", editable = true }
phlo-minio = { path = "../../phlo/packages/phlo-minio", editable = true }
phlo-nessie = { path = "../../phlo/packages/phlo-nessie", editable = true }
phlo-trino = { path = "../../phlo/packages/phlo-trino", editable = true }
phlo-openmetadata = { path = "../../phlo/packages/phlo-openmetadata", editable = true }
phlo-pandera = { path = "../../phlo/packages/phlo-pandera", editable = true }
phlo-testing = { path = "../../phlo/packages/phlo-testing", editable = true }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires a running Phlo table store",
]
addopts = ["-m", "not integration"]
