[project]
name = "glucose-platform"
version = "0.1.0"
description = "Phlo glucose monitoring demo - Nightscout CGM data lakehouse"
requires-python = ">=3.11"
dependencies = [
    "phlo==0.10.0",
    "phlo-core-plugins",
    "phlo-dagster",
    "phlo-dlt",
    "phlo-dbt",
    "phlo-iceberg",
    "phlo-nessie",
    "phlo-trino",
    "phlo-postgres",
    "phlo-minio",
    "phlo-pandera",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
