[project]
name = "pokemon-lakehouse"
version = "0.1.0"
description = "Pokemon data lakehouse powered by PokeAPI"
requires-python = ">=3.11"
dependencies = [
    "phlo==0.10.0",
    "phlo-core-plugins",
    "phlo-dagster",
    "phlo-dlt",
    "phlo-dbt",
    "phlo-iceberg",
    "phlo-nessie",
    "phlo-trino",
    "phlo-postgres",
    "phlo-minio",
    "phlo-pandera",
    "dbt-trino>=1.10.0",
]

[project.optional-dependencies]
openmetadata = [
    "phlo-openmetadata",
]
