[project]
name = "pokemon-workshop"
version = "0.1.0"
description = "Interactive Phlo workshop — build a Pokemon lakehouse step by step"
requires-python = ">=3.11"
dependencies = [
    "phlo==0.10.0",
    "phlo-core-plugins",
    "phlo-dagster",
    "phlo-dlt",
    "phlo-dbt",
    "phlo-iceberg",
    "phlo-lineage",
    "phlo-nessie",
    "phlo-trino",
    "phlo-postgres",
    "phlo-pgweb",
    "phlo-minio",
    "phlo-pandera",
    "phlo-observatory",
    "phlo-superset",
    "dbt-trino>=1.10.0",
]

[project.scripts]
workshop-runner = "workshop_runner.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["workshop_runner", "plugins"]

[project.optional-dependencies]
observability = [
    "phlo-otel",
    "phlo-clickstack",
    "phlo-grafana",
    "phlo-prometheus",
    "phlo-loki",
    "phlo-alloy",
]
catalog = [
    "phlo-openmetadata",
]
api = [
    "phlo-postgrest",
    "phlo-hasura",
    "phlo-api",
]
proxy = [
    "phlo-traefik",
]
sling = [
    "phlo-sling",
]
delta = [
    "phlo-delta",
    "phlo-rustfs",
]
testing = [
    "phlo-testing",
]
all = [
    "pokemon-workshop[observability,catalog,api,proxy,sling,delta,testing]",
]

[project.entry-points."phlo.plugins.cli"]
pokemon-stats = "plugins.pokemon_stats:PokemonStatsPlugin"
